Bug 7392:Tiles Layout - scroll bar is difficult to use
Added 2 pixels to the scrollbar's width; looks better and it's easier to drag

--- a/Web Apps/DMI.NET/DMI.NET/Content/jquery.mCustomScrollbar.css
+++ b/Web Apps/DMI.NET/DMI.NET/Content/jquery.mCustomScrollbar.css
@@ -93,7 +93,7 @@
 }
 .mCSB_horizontal>.mCSB_scrollTools .mCSB_draggerRail{
 	width:100%;
-	height:2px;
+	height:4px;
 	margin:7px 0;
 	-webkit-border-radius:10px;
 	-moz-border-radius:10px;
@@ -450,7 +450,7 @@
 }
 .mCS-dark-thin.mCSB_horizontal>.mCSB_scrollTools .mCSB_dragger .mCSB_dragger_bar{
 	width:100%;
-	height:2px;
+	height:4px;
 	margin:7px auto;
 }
 .mCS-dark-thin>.mCSB_scrollTools .mCSB_dragger:hover .mCSB_dragger_bar{
